# makeup

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makeup_tasks.py  pyproject.toml  test.env
src/makeup/: __init__.py  __main__.py  env.py  module_loader.py  tasks.py  utils.py
tests/: test_env.py  test_module.py  test_tasks.py  test_utils.py
tests/assets/: module2load.py
