[tool.poetry]
name = "pymakeup"
version = "0.1.0"
description = "Build your projects with ease and style!"
authors = ["kaiserthe13th <superkerem13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
